fix responsive layout issue

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -147,7 +147,18 @@
 }
 
 .toggleTOC {
+  .blockWithSidebar & {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    .blockWithSidebar & {
+      display: block;
+    }
+  }
   @media screen and (min-width: 1280px) {
+    .blockWithSidebar & {
+      display: none;
+    }
     display: none;
   }
 }
