--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Times New Roman', Times, serif;
   font-size: 16px;
   line-height: 1.2;
+  word-break: break-word;
 }
 
 h1,
